4.0 version and poms (#4655)
* Update version to 4.0.0-SNAPSHOT
* Switch Java 19 (EA)
* Allow preview features in tests.
* Upgrade to latest maven.
* disable native image tests